refactor:  refactor the mapper model
Signed-off-by: Josef Andersson <josef.andersson@gmail.com>